--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -93,6 +93,12 @@
                         android:dialogTitle="@string/prefDialogTitle_vibrateWhen" />
   </PreferenceCategory>
   <PreferenceCategory android:title="@string/pref_extra_settings">
+    <EditTextPreference
+                        android:key="pref_save_location"
+                        android:title="@string/pref_title_save_location"
+                        android:summary=""
+                        android:dialogTitle="@string/pref_title_save_location"
+                        android:defaultValue="download" />
     <CheckBoxPreference android:key="pref_key_mms_black_background"
                         android:title="@string/pref_title_mms_black_background"
                         android:summary="@string/pref_summary_mms_black_background"
