--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -93,9 +93,35 @@
                         android:dialogTitle="@string/prefDialogTitle_vibrateWhen" />
   </PreferenceCategory>
   <PreferenceCategory android:title="@string/pref_extra_settings">
+    <EditTextPreference
+                        android:key="pref_save_location"
+                        android:title="@string/pref_title_save_location"
+                        android:summary=""
+                        android:dialogTitle="@string/pref_title_save_location"
+                        android:defaultValue="download" />
+    <com.android.mms.preferences.UserAgentListPreference
+                        android:key="pref_key_mms_user_agent"
+                        android:defaultValue="default"
+                        android:title="@string/pref_title_mms_user_agent"
+                        android:summary="@string/pref_summary_mms_user_agent"
+                        android:entries="@array/pref_mms_user_agent_entries"
+                        android:entryValues="@array/pref_mms_user_agent_values"
+                        android:dialogTitle="@string/pref_title_mms_user_agent" />
+    <CheckBoxPreference android:key="pref_key_mms_back_to_all_threads"
+                        android:title="@string/pref_title_mms_back_to_all_threads"
+                        android:summary="@string/pref_summary_mms_back_to_all_threads"
+                        android:defaultValue="false" />
     <CheckBoxPreference android:key="pref_key_mms_black_background"
                         android:title="@string/pref_title_mms_black_background"
                         android:summary="@string/pref_summary_mms_black_background"
+                        android:defaultValue="false" />
+    <CheckBoxPreference android:key="pref_key_mms_full_timestamp"
+                        android:title="@string/pref_title_mms_full_timestamp"
+                        android:summary="@string/pref_summary_mms_full_timestamp"
+                        android:defaultValue="false" />
+    <CheckBoxPreference android:key="pref_key_mms_only_mobile_numbers"
+                        android:title="@string/pref_title_only_mobile_numbers"
+                        android:summary="@string/pref_summary_only_mobile_numbers"
                         android:defaultValue="false" />
   </PreferenceCategory>
 </PreferenceScreen>
