Push forward ruqqq back to all threads
Change-Id: I30ab0105ec95e9e50546a81cfcf3d77d54a954d2
Change-Id: Iae6ada405f31f3a73f215af5a461a5f601a2b3a1

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -99,6 +99,10 @@
                         android:summary=""
                         android:dialogTitle="@string/pref_title_save_location"
                         android:defaultValue="download" />
+    <CheckBoxPreference android:key="pref_key_mms_back_to_all_threads"
+                        android:title="@string/pref_title_mms_back_to_all_threads"
+                        android:summary="@string/pref_summary_mms_back_to_all_threads"
+                        android:defaultValue="false" />
     <CheckBoxPreference android:key="pref_key_mms_black_background"
                         android:title="@string/pref_title_mms_black_background"
                         android:summary="@string/pref_summary_mms_black_background"
