--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -99,6 +99,14 @@
                         android:summary=""
                         android:dialogTitle="@string/pref_title_save_location"
                         android:defaultValue="download" />
+    <com.android.mms.preferences.UserAgentListPreference
+                        android:key="pref_key_mms_user_agent"
+                        android:defaultValue="default"
+                        android:title="@string/pref_title_mms_user_agent"
+                        android:summary="@string/pref_summary_mms_user_agent"
+                        android:entries="@array/pref_mms_user_agent_entries"
+                        android:entryValues="@array/pref_mms_user_agent_values"
+                        android:dialogTitle="@string/pref_title_mms_user_agent" />
     <CheckBoxPreference android:key="pref_key_mms_back_to_all_threads"
                         android:title="@string/pref_title_mms_back_to_all_threads"
                         android:summary="@string/pref_summary_mms_back_to_all_threads"
