--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -79,4 +79,18 @@
         <item>SoftBank/1.0/X01T/SCJ001</item>
         <item>custom</item>
     </string-array>
+    <string-array name="pref_mms_message_font_size_entries">
+        <item>10</item>
+        <item>12</item>
+        <item>14(default)</item>
+        <item>18 </item>
+        <item>20</item>
+    </string-array>
+    <string-array translatable="false" name="pref_mms_message_font_size_values">
+        <item>10</item>
+        <item>12</item>
+        <item>14</item>
+        <item>18</item>
+        <item>20</item>
+     </string-array>
 </resources>
