--- a/res/values-ja/arrays.xml
+++ b/res/values-ja/arrays.xml
@@ -56,4 +56,23 @@
     <item msgid="6334637439528489607">"笑顔"</item>
     <item msgid="7602915122893958066">"混乱"</item>
   </string-array>
+
+  <string-array name="pref_mms_user_agent_values">
+    <item>@string/pref_key_mms_user_agent_default</item>
+    <item>NokiaN95/11.0.026; Series60/3.1 Profile/MIDP-2.0 Configuration/CLDC-1.1</item>
+    <item>iPhoneOS/3.0 (7A341)</item>
+    <item>BlackBerry8800/4.2.1 Profile/MIDP-2.0 Configuration/CLDC-1.1 VendorID/100</item>
+    <item>SonyEricssonW800i/R1L</item>
+    <item>SoftBank/1.0/X01T/SCJ001</item>
+    <item>カスタム</item>
+  </string-array>
+
+  <string-array name="pref_mms_message_font_size_entries">
+    <item>10</item>
+    <item>12</item>
+    <item>14</item>
+    <item>18(デフォルト)</item>
+    <item>20</item>
+  </string-array>
+
 </resources>
