--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -94,4 +94,20 @@
         <item>18</item>
         <item>20</item>
   </string-array>
+
+    <string-array name="pref_mms_notification_vibrate_pattern_entries">
+      <item>Normal</item>
+      <item>Medium Vibrate</item>
+      <item>Long Vibrate</item>
+      <item>Multiple Short</item>
+      <item>Multiple Long</item>
+   </string-array>
+    <string-array name="pref_mms_notification_vibrate_pattern_values">
+      <item></item>
+      <item>0,1200</item>
+      <item>0,2500</item>
+      <item>0,300,100,300,100,300,100,300,100,300</item>
+      <item>0,800,200,800,200,800</item>
+   </string-array>
+
 </resources>
