--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -141,7 +141,11 @@
                         android:title="@string/pref_title_mms_black_background"
                         android:summary="@string/pref_summary_mms_black_background"
                         android:defaultValue="false" />
-    <CheckBoxPreference android:key="pref_key_mms_full_timestamp"
+    <CheckBoxPreference android:key="pref_key_show_counter_always"
+                        android:title="@string/pref_title_show_counter_always"
+                        android:summary="@string/pref_summary_show_counter_always"
+                        android:defaultValue="false" />  
+  <CheckBoxPreference android:key="pref_key_mms_full_timestamp"
                         android:title="@string/pref_title_mms_full_timestamp"
                         android:summary="@string/pref_summary_mms_full_timestamp"
                         android:defaultValue="false" />
