--- a/res/values-sk/arrays.xml
+++ b/res/values-sk/arrays.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- 
+<!--
  * Copyright (C) 2008 Esmertec AG.
  * Copyright (C) 2008 The Android Open Source Project
  *
@@ -19,41 +19,82 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
   <string-array name="default_smiley_texts">
-    <item msgid="6418813270603201918">":-)"</item>
-    <item msgid="5037069969500587717">":-("</item>
-    <item msgid="1706022067142803863">";-)"</item>
-    <item msgid="1248733150365342132">":-P"</item>
-    <item msgid="817475806953665071">"=-O"</item>
-    <item msgid="2791428909459014455">":-*"</item>
-    <item msgid="3521914049512875091">":O"</item>
-    <item msgid="1245726345240784103">"B-)"</item>
-    <item msgid="6236841507652113784">":-$"</item>
-    <item msgid="9041518876704445176">":-!"</item>
-    <item msgid="5938573563873054892">":-["</item>
-    <item msgid="662834190186827918">"O:-)"</item>
-    <item msgid="8667007781479284572">":-\\"</item>
-    <item msgid="6895634303037073990">":\'("</item>
-    <item msgid="3660685022708121640">":-X"</item>
-    <item msgid="2893940139682468617">":-D"</item>
-    <item msgid="4888792634429693183">"o_O"</item>
+    <item>":-)"</item>
+    <item>":-("</item>
+    <item>";-)"</item>
+    <item>":-P"</item>
+    <item>"=-O"</item>
+    <item>":-*"</item>
+    <item>":O"</item>
+    <item>"B-)"</item>
+    <item>":-$"</item>
+    <item>":-!"</item>
+    <item>":-["</item>
+    <item>"O:-)"</item>
+    <item>":-\\"</item>
+    <item>":\'("</item>
+    <item>":-X"</item>
+    <item>":-D"</item>
+    <item>"o_O"</item>
   </string-array>
   <string-array name="default_smiley_names">
-    <item msgid="1831934949361041701">"Šťastím bez seba"</item>
-    <item msgid="1601611480575517120">"Smútok"</item>
-    <item msgid="1531181614218625881">"Žmurknutie"</item>
-    <item msgid="3858808057949077894">"Vyplazený jazyk"</item>
-    <item msgid="7835238297967185651">"Prekvapenie"</item>
-    <item msgid="1756223535005296033">"Bozk"</item>
-    <item msgid="1093906245140165107">"Hnevám sa"</item>
-    <item msgid="888834839864150170">"V pohode"</item>
-    <item msgid="6320683740534773967">"Cinkanie dukátov"</item>
-    <item msgid="6610111212478853990">"Trápnosť"</item>
-    <item msgid="1706035208563940251">"Rozpaky"</item>
-    <item msgid="9079275787422313427">"Anjelik"</item>
-    <item msgid="4630490399784004880">"Ešte neviem"</item>
-    <item msgid="7002574538342357456">"Plač"</item>
-    <item msgid="850324578089267455">"Ani muk"</item>
-    <item msgid="6334637439528489607">"Smiech"</item>
-    <item msgid="7602915122893958066">"Zmätený"</item>
+    <item>"Šťastím bez seba"</item>
+    <item>"Smútok"</item>
+    <item>"Žmurknutie"</item>
+    <item>"Vyplazený jazyk"</item>
+    <item>"Prekvapenie"</item>
+    <item>"Bozk"</item>
+    <item>"Hnevám sa"</item>
+    <item>"V pohode"</item>
+    <item>"Cinkanie dukátov"</item>
+    <item>"Trápnosť"</item>
+    <item>"Rozpaky"</item>
+    <item>"Anjelik"</item>
+    <item>"Ešte neviem"</item>
+    <item>"Plač"</item>
+    <item>"Ani muk"</item>
+    <item>"Smiech"</item>
+    <item>"Zmätený"</item>
   </string-array>
+  <string-array name="pref_mms_user_agent_entries">
+        <item>Štandardný Android</item>
+        <item>Nokia N95</item>
+        <item>iPhone (3.0)</item>
+        <item>BlackBerry 8800</item>
+        <item>Sony Ericsson W800i</item>
+        <item>SoftBank X01T</item>
+        <item>@string/pref_mms_custom_option</item>
+    </string-array>
+
+    <string-array name="pref_mms_message_font_size_entries">
+        <item>10</item>
+        <item>12</item>
+        <item>14</item>
+        <item>16</item>
+        <item>18 (Default)</item>
+        <item>20</item>
+    </string-array>
+
+    <string-array name="pref_mms_notification_vibrate_pattern_entries">
+      <item>Normálný</item>
+      <item>Stredné Vibrovanie</item>
+      <item>Dlhé Vibrovanie</item>
+      <item>Viaceré Krátke</item>
+      <item>Viaceré Dlhé</item>
+      <item>@string/pref_mms_custom_option</item>
+   </string-array>
+   <string-array name="pref_templates_gestures_sensitivity_entries">
+      <item>1 (najširší)</item>
+      <item>2</item>
+      <item>3</item>
+      <item>4</item>
+      <item>5</item>
+      <item>6</item>
+      <item>7</item>
+      <item>8</item>
+      <item>9</item>
+      <item>10</item>
+      <item>11</item>
+      <item>12 (najužší)</item>
+    </string-array>
 </resources>
