--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -92,4 +92,17 @@
                         android:entryValues="@array/prefValues_vibrateWhen"
                         android:dialogTitle="@string/prefDialogTitle_vibrateWhen" />
   </PreferenceCategory>
+	<PreferenceCategory android:title="@string/prefs_templates_settings">
+		<Preference android:key="pref_key_templates_manage"
+			android:persistent="false" android:summary="@string/pref_summary_templates_manage"
+			android:title="@string/pref_title_templates_manage" />
+		<CheckBoxPreference android:key="pref_key_templates_show_gesture"
+			android:title="@string/pref_title_templates_show_gesture"
+			android:summary="@string/pref_summary_templates_show_gesture"
+			android:defaultValue="false" />
+		<ListPreference android:key="pref_key_templates_gestures_sensitivity"
+			android:title="@string/pref_title_template_gestures_sensitivity"
+			android:entries="@array/pref_templates_gestures_sensitivity_entries"
+			android:entryValues="@array/pref_templates_gestures_sensitivity_values" />
+	</PreferenceCategory>
 </PreferenceScreen>
