--- a/res/layout/template_editor.xml
+++ b/res/layout/template_editor.xml
@@ -9,8 +9,9 @@
 		android:padding="15dip" />
 
 	<EditText android:id="@+id/template_text" android:hint="@string/template_insert_hint"
-		android:paddingLeft="15dip" android:paddingRight="15dip"
-		android:layout_width="match_parent" android:layout_height="wrap_content">
+		android:layout_marginLeft="15dip" android:layout_marginRight="15dip"
+		android:maxLines="3" android:layout_width="match_parent"
+		android:layout_height="wrap_content">
 	</EditText>
 
 
