--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -40,6 +40,13 @@
                       android:summary="@string/pref_summary_delete_limit"
                       android:title="@string/pref_title_mms_delete" />
   </PreferenceCategory>
+  <PreferenceCategory android:title="@string/pref_sms_general_title"
+                      android:key="pref_key_general_settings">
+    <CheckBoxPreference android:key="pref_key_show_counter_always"
+                      android:title="@string/pref_title_show_counter_always"
+                      android:summary="@string/pref_summary_show_counter_always"
+                      android:defaultValue="false" />
+  </PreferenceCategory>
   <PreferenceCategory android:title="@string/pref_sms_settings_title"
                       android:key="pref_key_sms_settings" >
     <CheckBoxPreference android:defaultValue="false"
