--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -26,5 +26,8 @@
 
     <style name="MmsHoloTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
     </style>
+    
+    <style name="NotificationText" parent="android:TextAppearance.StatusBar.EventContent" />
+    <style name="NotificationTitle" parent="android:TextAppearance.StatusBar.EventContent.Title" />
 
 </resources>
