--- a/res/values-nl/arrays.xml
+++ b/res/values-nl/arrays.xml
@@ -45,7 +45,7 @@
     <item msgid="7835238297967185651">"Verrast"</item>
     <item msgid="1756223535005296033">"Kussend"</item>
     <item msgid="1093906245140165107">"Schreeuwend"</item>
-    <item msgid="888834839864150170">"Graaf"</item>
+    <item msgid="888834839864150170">"Gaaf"</item>
     <item msgid="6320683740534773967">"Geldzoeker"</item>
     <item msgid="6610111212478853990">"Mond vol tanden"</item>
     <item msgid="1706035208563940251">"Beschaamd"</item>
@@ -82,7 +82,7 @@
     <item>@string/pref_mms_custom_option</item>
   </string-array>
   <string-array name="pref_templates_gestures_sensitivity_entries">
-    <item>1 (gevoeligste)</item>
+    <item>1 (minst gevoelig)</item>
     <item>2</item>
     <item>3</item>
     <item>4</item>
@@ -93,6 +93,6 @@
     <item>9</item>
     <item>10</item>
     <item>11</item>
-    <item>12 (minst gevoelig)</item>
+    <item>12 (gevoeligst)</item>
   </string-array>
 </resources>
